--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
+# spring.profiles.active=mysql
+# spring.profiles.active=postgres
+# spring.profiles.active=mysql-az
+spring.profiles.active=postgres-az
+
+
 # database init, supports mysql too
 database=h2
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.settings.web-allow-others=true
 
 # Web
 spring.thymeleaf.mode=HTML
